# python

./: .gitignore  .project  .pydevproject  CMakeLists.txt  Handlers.py  Painting.py  README.md  SimpleWebServer.py  camera-test.py  camshift-test.py  concentriccircles.py  darknet  db2_vertica_无unicode.dsx  docker.md  hist-test.py  imagehash-test.py  install  issues  issues.md  main.py  make.sh  mnist.py  mnist_image_test.py  ofTest.py  opencv_object_tracking.py  painterpaths.py  readme.md  requirements.txt  service.py  test.py  test0.py  test00.py  test01.py  test1.py  test_commons.os.py  test_gpu.py  test_gradient_decent.py  test_image.py  test_mnist.py  test_mnist_basic.py  (+10 more)
2/: 1.py  2.py  3.py  4.py  5-1.py  5.py  6.py
3/: 1-2.py  1.py  2-1.py  2-2.py  2-3.py  2-4.py  2.py  3.py  4.py  5.py  _5.py  _5_1.py  _5_2.py  _5_3.py
4/: 4-1.py  4-2.py  4-3.py  4-4.py
codechiev/: mnist_012.py  mnist_base.py  mnist_conv.py  painter.py
com/tf/: mnist.py  utils.py
cpp/: CMakeLists.txt  camera_test.cpp  darknet.py  darknet_test.cpp  darknet_test.hpp  make.sh  python_test.cpp  python_test.hpp
detector/: make.sh
detector/src/: CMakeLists.txt  collect_frame.cpp  count.cpp  count.hpp  darknet  detect.cpp  detect.hpp  eco_detect.cpp  eco_detect.hpp  eco_track.cpp
detector/src/tests/: test-collect-frame.cc  test-ecotracker.cc  test-nanocam.1.cc  test-nanocam.2.cc  test-nanocam.cc
frontend/: issues.md  package.json
frontend/config/: webpack.config.js
frontend/src/: App.js
frontend/src/cctv/: chart.js  config.js  detectionArea.js  index.float-chart.js  index.js
frontend/src/utils/: Modal.js  ajax.js  alert.js  commons.js  index.js
keras/: image_orc.py
lstm_seq2seq/: lstm_seq2seq.py  prepare_data.py  test.py  test_lstm.py
mysite/: readme.md
mysite/cctv/: controllers.py  darknet.py  imagehash.py  models.py  schedule_report.py  track.py  urls.py  views.py
mysite/cctv/migrations/: 0001_initial.py  0002_auto_20190120_1219.py  0003_auto_20190122_0249.py
mysite/mysite/: settings.py  urls.py
mysite/utils/: http.py
ocr/: readme.md
sequential-model-guide/: seq-guide.py  test-1.py  test-2.py  test-stacked-lstm.py  test-stateful-lstm.py
src/: read.py  test-docx.py  test-docxtpl.1.py  test-docxtpl.py  test.py
test/: ip.py  parse.py  sqlite.py  utc.py
tests/: test-camera.cc  test-camera.cc.1  test-camera.cc.2
tf/: test_tf_input.py  test_tf_linear.py  test_tf_linear_.py  test_tf_wideAndDeep.py
tf/examples/learn/: text_classification.1.py  text_classification.py  text_classification_character_cnn.py  text_classification_character_rnn.py  text_classification_cnn.1.py
tf/examples/tutorials/deepdream/: deepdream.ipynb
tf/examples/tutorials/word2vec/: word2vec_basic.1.py  word2vec_basic.py
tf/models/tutorials/rnn/ptb/: reader.py
utils/: db.py  db_test.py  timer.py
utils/d2l/: commons.py
web/: cert.pem  commons.js  http  index.html  key.pem
